# GCSENEA-MusicQuiz

./: .gitignore  README.md  pyproject.toml
quiz/: __init__.py  admin.py  auth.py  db.py  game.py  index.py  leaderboard.py  schema.sql
quiz/templates/: base.html  game.html  index.html  leaderboard.html
quiz/templates/admin/: songs.html  users.html
quiz/templates/auth/: base.html  changepw.html  login.html  register.html
