[tool.poetry]
name = "gcsenea-musicquiz"
version = "0.1.0"
description = ""
authors = ["404dcd <ben.github@thegenius.org.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
bcrypt = "^3.2.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
